call button added

--- a/html/about.html
+++ b/html/about.html
@@ -251,6 +251,10 @@
       <i class="fa-brands fa-whatsapp"></i>
     </a>
 
+    <a href="tel:+917304888579" class="bottomCallUs">
+      <i class="fa-solid fa-phone"></i>
+    </a>
+
     <!--  -->
     <div class="gotoTop" onclick="BacktoTop()">
       <i class="fa-solid fa-arrow-up"></i>
