--- a/html/contact.html
+++ b/html/contact.html
@@ -90,7 +90,7 @@
 
     <!-- Icons Contact Us -->
 
-    <section class="iconsContacts">
+    <section class="iconsContacts" id="iconsContacts">
       <div class="iconBoxMain">
         <div class="iconBox">
           <a href="#">
@@ -133,12 +133,11 @@
 
     <section class="contact-section" id="contact-section">
       <div class="visit-office">
-        <h2>Visit Our Office</h2>
-        <p>
-          Aenean massa. Cum sociis natoque penatibus et magnis dis parturient
-          montes, nascetur ridiculus mus. Donec quam felis, ultricies nec,
-          pellentesque eu, pretium quis, sem.
-        </p>
+        <h2>Visit Our Shop</h2>
+        <address>
+          Shop No. 125, Shivaji Apartments, Linking Road, <br />
+          Bandra West, Mumbai - 400050 Maharashtra, India
+        </address>
         <div class="map-container">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30128.029600088325!2d72.85593688525938!3d19.282205304285235!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b0458cf7298b%3A0x468ed839e9df2b21!2sMira%20Road%20East%2C%20Mira%20Bhayandar%2C%20Maharashtra!5e0!3m2!1sen!2sin!4v1729521969181!5m2!1sen!2sin"
@@ -155,9 +154,8 @@
       <div class="leave-message" id="leave-message">
         <h2>Leave Us a Message</h2>
         <p>
-          Aenean massa. Cum sociis natoque penatibus et magnis dis parturient
-          montes, nascetur ridiculus mus. Donec quam felis, ultricies nec,
-          pellentesque eu, pretium quis, sem.
+          Thank you for reaching out to us. Leave a meassage our team will get
+          in touch with you shortly. Have a nice day!
         </p>
         <form action="https://formspree.io/f/mqkvqkjn" method="POST">
           <label for="name">Name*</label>
@@ -191,17 +189,17 @@
 
           <select name="servicesInput" id="servicesInput" required>
             <option value="Select Service">Select Service</option>
-            <option value="Mobile Repair">Mobile</option>
-            <option value="Laptop Repair">Laptop</option>
-            <option value="Data Backup">Camera</option>
-            <option value="Mac Repair">Mac</option>
+            <option value="Mobile">Mobile</option>
+            <option value="Laptop">Laptop</option>
+            <option value="Camera">Camera</option>
+            <option value="Mac">Mac</option>
           </select>
 
-          <label for="message">Message or Issue?</label>
+          <label for="message">Message Us</label>
           <textarea
             id="message"
             name="message"
-            placeholder="Your Message"
+            placeholder="Describe your problem"
           ></textarea>
           <div class="emailWhatsappBtn">
             <button type="submit">Send on Email</button><span>OR</span>
@@ -278,6 +276,10 @@
       <i class="fa-brands fa-whatsapp"></i>
     </a>
 
+    <a href="tel:+917304888579" class="bottomCallUs">
+      <i class="fa-solid fa-phone"></i>
+    </a>
+
     <!--  -->
     <div class="gotoTop" onclick="BacktoTop()">
       <i class="fa-solid fa-arrow-up"></i>
@@ -305,7 +307,7 @@
           "email: " +
           email +
           "%0a" +
-          "servicesInput: " +
+          "Device: " +
           servicesInput +
           "%0a" +
           "message: " +
