--- a/html/repairservices.html
+++ b/html/repairservices.html
@@ -340,9 +340,11 @@
     </section>
 
     <div class="messageUsForDiffService">
-      <a href="../html/contact.html#leave-message"
-        >Looking for other repair service? Message Us
-      </a>
+      <p>
+        Looking for other repair service? Leave a message our team will get in
+        touch with you shortly! Thank you for choosing us.
+      </p>
+      <a href="../html/contact.html#leave-message">Message Us </a>
     </div>
 
     <!--  -->
@@ -353,6 +355,10 @@
       class="bottomWhatsapp"
     >
       <i class="fa-brands fa-whatsapp"></i>
+    </a>
+
+    <a href="tel:+917304888579" class="bottomCallUs">
+      <i class="fa-solid fa-phone"></i>
     </a>
 
     <!--  -->
