added some content WS

--- a/index.html
+++ b/index.html
@@ -218,7 +218,9 @@
           <strong> Screen Replacement </strong>
           <p class="descService">Cracked or broken screen repair.</p>
           <p class="price">&#8377; 1999</p>
-          <a onclick="gotoWsForPhoneRepair()" class="gotoWsA">Fix This Issue</a>
+          <a onclick="gotoWsForPhoneRepair1()" class="gotoWsA"
+            >Fix This Issue</a
+          >
         </div>
         <div class="sevicesBox" data-name="computer">
           <i class="fa-solid fa-computer"></i>
@@ -227,7 +229,7 @@
             Diagnosing and repairing motherboard issues.
           </p>
           <p class="price">&#8377; 1999</p>
-          <a onclick="gotoWsForPCRepair()" class="gotoWsA">Fix This Issue</a>
+          <a onclick="gotoWsForPCRepair1()" class="gotoWsA">Fix This Issue</a>
         </div>
         <div class="sevicesBox" data-name="laptop">
           <i class="fa-solid fa-laptop"></i>
@@ -236,7 +238,7 @@
             Repair or replacement of cracked, damaged, or flickering screens.
           </p>
           <p class="price">&#8377; 1999</p>
-          <a onclick="gotoWsForLaptopRepair()" class="gotoWsA"
+          <a onclick="gotoWsForLaptopRepair1()" class="gotoWsA"
             >Fix This Issue</a
           >
         </div>
@@ -245,7 +247,7 @@
           <strong> Processor (CPU) Repair or Replacement </strong>
           <p class="descService">Fixing or replacing damaged processors.</p>
           <p class="price">&#8377; 1999</p>
-          <a onclick="gotoWsForPCRepair()" class="gotoWsA">Fix This Issue</a>
+          <a onclick="gotoWsForPCRepair2()" class="gotoWsA">Fix This Issue</a>
         </div>
         <div class="sevicesBox" data-name="laptop">
           <i class="fa-solid fa-laptop"></i>
@@ -254,14 +256,18 @@
             Fixing or replacing unresponsive, damaged, or broken keys.
           </p>
           <p class="price">&#8377; 1999</p>
-          <a onclick="gotoWs()" class="gotoWsA">Fix This Issue</a>
+          <a onclick="gotoWsForLaptopRepair2()" class="gotoWsA"
+            >Fix This Issue</a
+          >
         </div>
         <div class="sevicesBox" data-name="mobile">
           <i class="fa-solid fa-mobile"></i>
           <strong> Battery Replacement </strong>
           <p class="descService">Fixing or replacing faulty batteries.</p>
           <p class="price">&#8377; 1999</p>
-          <a onclick="gotoWs()" class="gotoWsA">Fix This Issue</a>
+          <a onclick="gotoWsForPhoneRepair2()" class="gotoWsA"
+            >Fix This Issue</a
+          >
         </div>
       </div>
 
