in contact page changes services to gadget in select tag

--- a/html/contact.html
+++ b/html/contact.html
@@ -187,7 +187,7 @@
           <label for="servicesInput">Issue Regarding Which Gadget*</label>
 
           <select name="servicesInput" id="servicesInput" required>
-            <option value="" disabled selected>Select Service</option>
+            <option value="" disabled selected>Select Gadget</option>
             <option value="Mobile">Mobile</option>
             <option value="Laptop">Laptop</option>
             <option value="Camera">Camera</option>
