--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
         <strong>Customer Stories</strong>
         <div class="review" id="review">
           <div class="peopleImg">
-            <img src="images/StImg2.webp" width="50px" alt="person Image" />
+            <img src="" width="50px" alt="person Image" />
           </div>
           <span></span>
           <p></p>
