--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@
         >
         <ul class="ulBar">
           <li>
-            <a
-              href="index.html"
-              style="background-color: orangered; color: #fff"
+            <a href="index.html" class="onHome"
               ><i class="fa-solid fa-house"></i> Home</a
             >
           </li>
@@ -88,6 +86,7 @@
         </ul>
       </header>
     </section>
+
     <!-- SlideShow Section -->
     <section class="bgMainSection">
       <div class="slider">
@@ -213,61 +212,77 @@
         specialized team
       </p>
       <div class="subServicesSection">
-        <div class="sevicesBox" data-name="mobile">
+        <div
+          class="sevicesBox"
+          onclick="gotoWsForPhoneRepair1()"
+          data-name="mobile"
+        >
           <i class="fa-solid fa-mobile"></i>
           <strong> Screen Replacement </strong>
           <p class="descService">Cracked or broken screen repair.</p>
           <p class="price">&#8377; 1999</p>
-          <a onclick="gotoWsForPhoneRepair1()" class="gotoWsA"
-            >Fix This Issue</a
-          >
+          <a class="gotoWsA">Fix This Issue</a>
         </div>
-        <div class="sevicesBox" data-name="computer">
+        <div
+          class="sevicesBox"
+          onclick="gotoWsForPCRepair1()"
+          data-name="computer"
+        >
           <i class="fa-solid fa-computer"></i>
           <strong> Motherboard Repair </strong>
           <p class="descService">
             Diagnosing and repairing motherboard issues.
           </p>
           <p class="price">&#8377; 1999</p>
-          <a onclick="gotoWsForPCRepair1()" class="gotoWsA">Fix This Issue</a>
+          <a class="gotoWsA">Fix This Issue</a>
         </div>
-        <div class="sevicesBox" data-name="laptop">
+        <div
+          class="sevicesBox"
+          onclick="gotoWsForLaptopRepair1()"
+          data-name="laptop"
+        >
           <i class="fa-solid fa-laptop"></i>
           <strong> Screen Replacement </strong>
           <p class="descService">
             Repair or replacement of cracked, damaged, or flickering screens.
           </p>
           <p class="price">&#8377; 1999</p>
-          <a onclick="gotoWsForLaptopRepair1()" class="gotoWsA"
-            >Fix This Issue</a
-          >
+          <a class="gotoWsA">Fix This Issue</a>
         </div>
-        <div class="sevicesBox" data-name="computer">
+        <div
+          class="sevicesBox"
+          onclick="gotoWsForPCRepair2()"
+          data-name="computer"
+        >
           <i class="fa-solid fa-computer"></i>
           <strong> Processor (CPU) Repair or Replacement </strong>
           <p class="descService">Fixing or replacing damaged processors.</p>
           <p class="price">&#8377; 1999</p>
-          <a onclick="gotoWsForPCRepair2()" class="gotoWsA">Fix This Issue</a>
+          <a class="gotoWsA">Fix This Issue</a>
         </div>
-        <div class="sevicesBox" data-name="laptop">
+        <div
+          class="sevicesBox"
+          onclick="gotoWsForLaptopRepair2()"
+          data-name="laptop"
+        >
           <i class="fa-solid fa-laptop"></i>
           <strong> Keyboard Repair </strong>
           <p class="descService">
             Fixing or replacing unresponsive, damaged, or broken keys.
           </p>
           <p class="price">&#8377; 1999</p>
-          <a onclick="gotoWsForLaptopRepair2()" class="gotoWsA"
-            >Fix This Issue</a
-          >
+          <a class="gotoWsA">Fix This Issue</a>
         </div>
-        <div class="sevicesBox" data-name="mobile">
+        <div
+          class="sevicesBox"
+          onclick="gotoWsForPhoneRepair2()"
+          data-name="mobile"
+        >
           <i class="fa-solid fa-mobile"></i>
           <strong> Battery Replacement </strong>
           <p class="descService">Fixing or replacing faulty batteries.</p>
           <p class="price">&#8377; 1999</p>
-          <a onclick="gotoWsForPhoneRepair2()" class="gotoWsA"
-            >Fix This Issue</a
-          >
+          <a class="gotoWsA">Fix This Issue</a>
         </div>
       </div>
 
