--- a/html/about.html
+++ b/html/about.html
@@ -61,10 +61,7 @@
             >
           </li>
           <li>
-            <a
-              href="about.html"
-              style="background-color: orangered; color: #fff"
-            >
+            <a href="about.html" class="onAbout">
               <i class="fa-solid fa-users-gear"></i> About Us</a
             >
           </li>
