thank you page added after form submit

--- a/html/contact.html
+++ b/html/contact.html
@@ -154,7 +154,16 @@
           Thank you for reaching out to us. Leave a meassage our team will get
           in touch with you shortly. Have a nice day!
         </p>
-        <form action="https://formspree.io/f/mkgnaggj" method="POST">
+        <form
+          action="https://formsubmit.co/funlotsof09@gmail.com"
+          method="POST"
+        >
+          <input type="hidden" name="_subject" value="Customer Query" />
+          <input
+            type="hidden"
+            name="_next"
+            value="https://sufiyan055.github.io/MyPortfolio-website/"
+          />
           <label for="name">Name*</label>
           <input
             type="text"
