--- a/html/about.html
+++ b/html/about.html
@@ -195,7 +195,7 @@
       <div class="quickLinks">
         <strong>Quick Links</strong>
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="/index.html">Home</a></li>
           <li><a href="repairservices.html">Repair Services</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="contact.html">Contact Us</a></li>
